# biotranslator

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tutorial.ipynb  tutorial.py
BioTranslator/: .gitignore  BioConfig.py  BioLoader.py  BioMetrics.py  __init__.py  _metadata.py  biotranslator_function.py  pyproject.toml  trainers.py
BioTranslator/biotranslator/: __init__.py  _encoder.py
BioTranslator/config/: __init__.py  _config.py  _graph_config.py  _sequence_config.py  _vector_config.py
BioTranslator/emb_loaders/: __init__.py  _graph_loader.py  _sequence_loader.py  _vector_loader.py
BioTranslator/loader/: __init__.py  _bioloader.py
BioTranslator/metrics/: __init__.py  _micro_auroc.py
BioTranslator/non_text_encoder/: __init__.py  _graph_encoder.py  _sequence_encoder.py  _vector_encoder.py
BioTranslator/source/: BioConfig.py  BioLoader.py  BioMetrics.py  BioModel.py  BioTrainer.py  BioUtils.py
BioTranslator/task/: _bioloader.py
BioTranslator/text_encoder/: __init__.py  _get_data.py  _train.py
BioTranslator/trainer/: __init__.py  _graph_trainer.py  _sequence_trainer.py  _trainer.py  _vector_trainer.py
BioTranslator/trainers/: __init__.py  _graph_trainer.py  _sequence_trainer.py
BioTranslator/trash/: bioloader.py
BioTranslator/utils/: __init__.py  _utils.py
Codebase/Pathway/: main.py  pathway_analysis.sh
Codebase/Protein/: main.py
Codebase/SingleCell/: main.py
Pathway/: main.py
Pathway/BioTranslator/: BioLoader.py
Protein/: main.py  protein_function_prediction.sh
Protein/BioTranslator/: BioLoader.py
SingleCell/: main.py
SingleCell/BioTranslator/: BioLoader.py  BioUtils.py
TextEncoder/: train_text_encoder.py
back_up/: test.ipynb
biotranslator/: README.md  __init__.py  biotranslator_function.py
biotranslator/biotranslator/: _encoder.py
biotranslator/config/: _config.py
biotranslator/loader/: _bioloader.py
biotranslator/metrics/: _auroc.py  (+2 more)
pytorch/: lightning_study.py
(+29 files in other folders)
