[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "BioTranslator"
authors = [
    {name = "Hanwen Xu"},
    {name = "Yunwei Zhao"},
    {name = "Addie Woicik"},
    {name = "Hoifung Poon"},
    {name = "Russ B.Altman"},
    {name = "Sheng Wang"}
]
